# humanoid_op_ros_kinetic

./: README.md  install.txt
src/nimbro/: TopLevelCMakeLists.txt
src/nimbro/demonstration/sitting_demo/: CMakeLists.txt
src/nimbro/hardware/diagnostics/: CMakeLists.txt
src/nimbro/hardware/diagnostics/include/diagnostics/: diagnostics.h
src/nimbro/hardware/diagnostics/src/: diagnostics.cpp
src/nimbro/hardware/igus_moveit_config/: package.xml
src/nimbro/hardware/igus_moveit_config/config/: fake_controllers.yaml  igus_op.srdf  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml
src/nimbro/hardware/igus_moveit_config/launch/: demo.launch  move_group.launch  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
src/nimbro/launch/config/: field_model.yaml
src/nimbro/launch/motions/P1_xs0/: simpleMotion.yaml  simple_motion.yaml
src/nimbro/localization/field_model/: CMakeLists.txt
src/nimbro/localization/loc_display/: CMakeLists.txt
src/nimbro/localization/loc_display/ogre/scripts/: field.material
src/nimbro/motion/gait_engines/cap_gait/: CMakeLists.txt
src/nimbro/motion/gait_engines/cap_gait/include/cap_gait/contrib/: RobotModelVis.h
src/nimbro/motion/motion_player/: CMakeLists.txt
src/nimbro/scripts/: CMakeLists.txt  camera_publisher.py  env.sh  face_detection.py  face_tracker.py  install_openfec.sh  moveit.py  moveit_start.py
src/nimbro/scripts/web/: webserver.py
src/nimbro/scripts/web/static/: outline.js  tutorial.css
src/nimbro/scripts/web/static/rosjs/: ros3d.min.js
src/nimbro/scripts/web/webFiles/: cp.html  imu.html  launch.html
src/nimbro/tools/control_widget/: CMakeLists.txt
src/nimbro/tools/led_widget/: CMakeLists.txt
src/nimbro/tools/nimbro_utils/: CMakeLists.txt
src/nimbro/tools/rqt_vision_module/: CMakeLists.txt
src/nimbro/tools/rqt_vision_module/include/rqt_vision_module/: layout.hpp
src/nimbro/tools/rqt_vision_module/src/rqt_vision_module/: layout.cpp  main.cpp
src/nimbro/tools/test1/: CMakeLists.txt  package.xml  plugin.xml  setup.py
src/nimbro/tools/test1/scripts/: test1
src/nimbro/tools/test1/src/test1/: test2.py
src/nimbro/tools/walk_control/: CMakeLists.txt
src/nimbro_robotcontrol/util/rot_conv/: CMakeLists.txt
src/nimbro_vis/plotter/src/: plot.cpp  plotwidget.cpp
src/nimbro_vis/rqt_log_viewer/src/: log_view.cpp
